# VSEIoTCoreServer/VSEIoTCoreServer.DAL/Models/GlobalConfiguration.cs
@@ -1,17 +1,20 @@
 ﻿// ----------------------------------------------------------------------------
-// Filename: IoTCoreOptions.cs
+// Filename: GlobalConfiguration.cs
 // Copyright (c) 2022 ifm diagnostic GmbH - All rights reserved.
 // ----------------------------------------------------------------------------
 // This file is subject to the terms and conditions defined in
 // file 'LICENSE.txt', which is part of this source code package.
 
-namespace VSEIoTCoreServer.WebApp
+namespace VSEIoTCoreServer.DAL.Models
 {
-    public class IoTCoreOptions
-    {
-        public const string IoTCoreSettings = "IoTCoreSettings";
+    using System.ComponentModel.DataAnnotations;
 
-        public string AdapterLocation { get; set; } = string.Empty;
-        public string IoTCoreURI { get; set; } = string.Empty;
+    public class GlobalConfiguration
+    {
+        [Required]
+        public int Id { get; set; }
+        [Required]
+        [Range(1, 65535)]
+        public int GlobalIoTCorePort { get; set; }
     }
 }
