# VSEIoTCoreServer/VSEIoTCoreServer.WebApp/ClientApp/src/app/api/models/global-configuration-view-model.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface GlobalConfigurationViewModel {
+  globalIoTCorePort: number;
+  id: number;
+}
